--- a/dsa.ipynb
+++ b/dsa.ipynb
@@ -756,7 +756,7 @@
         "id": "QNO_47I_qGA0",
         "outputId": "bd852f69-a6bb-4c2e-fa10-aa9cab4198b3"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -898,35 +898,169 @@
       "cell_type": "code",
       "source": [
         "#Merge sort\n",
-        "def merge()"
+        "def merge(left,right):\n",
+        "  a=[]\n",
+        "  i=0\n",
+        "  j=0\n",
+        "  while i<len(left) and j<len(right):\n",
+        "    if left[i]<right[j]:\n",
+        "      a.append(left[i])\n",
+        "      i+=1\n",
+        "    else:\n",
+        "      a.append(right[j])\n",
+        "      j+=1\n",
+        "  while i<len(left):\n",
+        "    a.append(left[i])\n",
+        "    i+=1\n",
+        "  while j<len(right):\n",
+        "    a.append(right[j])\n",
+        "    j+=1\n",
+        "  return a\n",
+        "def mergeSort(arr):\n",
+        "  if len(arr)==1:\n",
+        "    return arr\n",
+        "  mid=len(arr)//2\n",
+        "  left=mergeSort(arr[:mid])\n",
+        "  right=mergeSort(arr[mid:])\n",
+        "  return merge(left,right)\n",
+        "\n",
+        "arr=[30,5,0,1,20,4]\n",
+        "mergeSort(arr)"
       ],
       "metadata": {
-        "id": "R3y9pQzKPzVx"
+        "id": "R3y9pQzKPzVx",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "58ed7358-886f-4c5f-c1ad-542ebd0da1a2"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[0, 1, 4, 5, 20, 30]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        ""
+        "#merge sort using inplace sorting\n",
+        "def merge(arr,s,m,e):\n",
+        "  a=[]\n",
+        "  i=s\n",
+        "  j=m\n",
+        "  while i<m and j<e:\n",
+        "    if arr[i]<arr[j]:\n",
+        "      a.append(arr[i])\n",
+        "      i+=1\n",
+        "    else:\n",
+        "      a.append(arr[j])\n",
+        "      j+=1\n",
+        "  while i<m:\n",
+        "    a.append(arr[i])\n",
+        "    i+=1\n",
+        "  while j<e:\n",
+        "    a.append(arr[j])\n",
+        "    j+=1\n",
+        "  for i in range(len(a)):\n",
+        "    arr[i+s]=a[i]\n",
+        "def mergeSort(arr,s,e):\n",
+        "  if e-s==1:\n",
+        "    return\n",
+        "  m=(s+e)//2\n",
+        "  mergeSort(arr,s,m)\n",
+        "  mergeSort(arr,m,e)\n",
+        "  merge(arr,s,m,e)\n",
+        "\n",
+        "arr=[30,5,0,1,20,4]\n",
+        "mergeSort(arr,0,len(arr))\n",
+        "print(arr)"
       ],
       "metadata": {
-        "id": "oAQ4VbljPzS1"
+        "id": "oAQ4VbljPzS1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7c017876-411f-4548-b843-8d7d4a0373a3"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[0, 1, 4, 5, 20, 30]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Hybrid sorting algorithm (Tim sorting)=merge+insertion works with partially sorted data"
+      ],
+      "metadata": {
+        "id": "gaJhQTf8aGfd"
+      }
     },
     {
       "cell_type": "code",
       "source": [
-        ""
+        "#Quick sort worst case is if pivot is smallest or largest number its omplecxity is O(n²)\n",
+        "def quickSort(arr,low,hi):\n",
+        "  if low>=hi:\n",
+        "    return\n",
+        "  s=low\n",
+        "  e=hi\n",
+        "  m=(s+e)//2\n",
+        "  pivot=arr[m]\n",
+        "  print(pivot)\n",
+        "  while s<=e:\n",
+        "    while arr[s]<pivot:\n",
+        "      s+=1\n",
+        "    while arr[e]>pivot:\n",
+        "      e-=1\n",
+        "    if s<=e:\n",
+        "      arr[s],arr[e]=arr[e],arr[s]\n",
+        "      s+=1\n",
+        "      e-=1\n",
+        "  #now pivot is at correct index now sort other halfes\n",
+        "  quickSort(arr,low,e)\n",
+        "  quickSort(arr,s,hi)\n",
+        "arr=[1,6,100,2,12,5,34,3]\n",
+        "quickSort(arr,0,len(arr)-1)\n",
+        "print(arr)"
       ],
       "metadata": {
-        "id": "DZlWU4DcPzPs"
+        "id": "DZlWU4DcPzPs",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4ea50afb-b794-49fb-e021-9ec5d31c0b3f"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n",
+            "1\n",
+            "12\n",
+            "6\n",
+            "3\n",
+            "34\n",
+            "[1, 2, 3, 5, 6, 12, 34, 100]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -1137,6 +1271,191 @@
         "\n",
         "gcd(45,10)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Subsequence\n",
+        "s=\"abc\"\n",
+        "def subseq(p,up):\n",
+        "  if up==\"\":\n",
+        "    print(p,end=\" \")\n",
+        "    return \n",
+        "  subseq(p,up[1:])\n",
+        "  subseq(p+up[0],up[1:])\n",
+        "subseq(\"\",s)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FGMcu8Am0Qac",
+        "outputId": "06777a70-bbec-48ba-fbc2-6ca16de3619e"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " c b bc a ac ab abc "
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Subsequence\n",
+        "s=\"abc\"\n",
+        "def subseq(p,up):\n",
+        "  if up==\"\":\n",
+        "    return [p]\n",
+        "  left=subseq(p,up[1:])\n",
+        "  right=subseq(p+up[0],up[1:])\n",
+        "  left.extend(right)\n",
+        "  return left\n",
+        "subseq(\"\",s)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TsHn1rrY4ua2",
+        "outputId": "c3563b6c-4a68-4d64-e136-5b1280395687"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['', 'c', 'b', 'bc', 'a', 'ac', 'ab', 'abc']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Subset\n",
+        "s=\"abc\"\n",
+        "def subset(s):\n",
+        "  outerl=[[]]\n",
+        "  for i in s:\n",
+        "    for j in range(len(outerl)):\n",
+        "      innerl=outerl[j].copy()\n",
+        "      innerl.append(i)\n",
+        "      outerl.append(innerl)\n",
+        "  return outerl\n",
+        "print(subset(s))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lS5VwSqM4u71",
+        "outputId": "6406426d-44c3-4f10-f989-ebe4215f174e"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[], ['a'], ['b'], ['a', 'b'], ['c'], ['a', 'c'], ['b', 'c'], ['a', 'b', 'c']]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#when duplicate is found add to newly created array also this works when adjacent element are duplicated so sort the array\n",
+        "#         [][1](dont add 2 in this)     [2][1,2](add here its index is len of outerl -1)\n",
+        "#                    [][1][2]    [1,2][2,2][1,2,2]\n",
+        "a=[1,2,2]\n",
+        "def subset(arr):\n",
+        "  arr.sort()\n",
+        "  outerl=[[]]\n",
+        "  start=0\n",
+        "  end=0\n",
+        "  for i in range(len(arr)):\n",
+        "    #if current and previous element is same s=e+1 ie end index+=1 of previous outerl is start of new outerl \n",
+        "    if i>0 and arr[i]==arr[i-1]:\n",
+        "      start=end+1\n",
+        "    end=len(outerl)-1\n",
+        "    for j in range(start,len(outerl)):\n",
+        "      innerl=outerl[j].copy()\n",
+        "      innerl.append(arr[i])\n",
+        "      outerl.append(innerl)\n",
+        "  return outerl\n",
+        "print(subset(a))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JnxVrbLi4vCS",
+        "outputId": "36f6a6de-3242-41b2-fbe5-053ba9aa6153"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[], [1], [2], [1, 2], [2, 2], [1, 2, 2]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "tn3OLnAv4vFQ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "j4VHRsE_4vIG"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "tkXOvT664vK5"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "L3uo7VP-4vNl"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
